testdata/baselines/reference/submodule/compiler/letDeclarations-useBeforeDefinition.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
letDeclarations-useBeforeDefinition.ts(2,5): error TS2448: Block-scoped variable 'l1' used before its declaration.
letDeclarations-useBeforeDefinition.ts(8,5): error TS2448: Block-scoped variable 'v1' used before its declaration.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== letDeclarations-useBeforeDefinition.ts (2 errors) ====
    {
        l1;
        ~~
!!! error TS2448: Block-scoped variable 'l1' used before its declaration.
!!! related TS2728 letDeclarations-useBeforeDefinition.ts:3:9: 'l1' is declared here.
        let l1;
    }
    
    var v1;
    {
        v1;
        ~~
!!! error TS2448: Block-scoped variable 'v1' used before its declaration.
!!! related TS2728 letDeclarations-useBeforeDefinition.ts:9:9: 'v1' is declared here.
        let v1 = 0;
    }
    